--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Learning english language application for kids.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "style": "sass --watch src/sass/style.scss src/sass/style.css",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
